# OCP

./: docker-compose.yml  dockerfile  pyproject.toml
backend/: app.py  preprocess.py  requirements.txt  test.ipynb  train.py
training/: Dockerfile  functions.py  main.py  pyproject.toml
ui/: Dockerfile  app.py  pyproject.toml
