[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
numpy = "^1.26.4"
requests = "^2.31.0"
pandas = "^2.2.2"
streamlit-option-menu = "^0.3.12"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
