[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi="^0.110.1"
matplotlib="^3.7.2"
numpy="^1.23.2"
pandas="^2.0.3"
pydantic="^2.7.0"
scikit_learn="^1.3.0"
uvicorn="^0.29.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
