[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib="^3.7.2"
pandas="^2.0.3"
Requests="^2.31.0"
seaborn="^0.13.2"
streamlit="^1.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.app"
